@@ -51,7 +51,6 @@ public abstract class ExpressionFactory {
 
     private static final String PROPERTY_NAME = "javax.el.ExpressionFactory";
 
-    private static final String SEP;
     private static final String PROPERTY_FILE;
 
     private static final CacheValue nullTcclFactory = new CacheValue();
@@ -60,35 +59,51 @@ public abstract class ExpressionFactory {
 
     static {
         if (IS_SECURITY_ENABLED) {
-            SEP = AccessController.doPrivileged(
-                    new PrivilegedAction<String>(){
-                        @Override
-                        public String run() {
-                            return System.getProperty("file.separator");
-                        }
-
-                    }
-            );
             PROPERTY_FILE = AccessController.doPrivileged(
                     new PrivilegedAction<String>(){
                         @Override
                         public String run() {
-                            return System.getProperty("java.home") + SEP +
-                                    "lib" + SEP + "el.properties";
+                            return System.getProperty("java.home") + File.separator +
+                                    "lib" + File.separator + "el.properties";
                         }
 
                     }
             );
         } else {
-            SEP = System.getProperty("file.separator");
-            PROPERTY_FILE = System.getProperty("java.home") + SEP + "lib" +
-                    SEP + "el.properties";
+            PROPERTY_FILE = System.getProperty("java.home") + File.separator + "lib" +
+                    File.separator + "el.properties";
         }
     }
 
+    /**
+     * Coerce the supplied object to the requested type.
+     *
+     * @param obj          The object to be coerced
+     * @param expectedType The type to which the object should be coerced
+     *
+     * @return An instance of the requested type.
+     *
+     * @throws ELException
+     *              If the conversion fails
+     */
     public abstract Object coerceToType(Object obj, Class<?> expectedType)
             throws ELException;
 
+    /**
+     * Create a new value expression.
+     *
+     * @param context      The EL context for this evaluation
+     * @param expression   The String representation of the value expression
+     * @param expectedType The expected type of the result of evaluating the
+     *                     expression
+     *
+     * @return A new value expression formed from the input parameters
+     *
+     * @throws NullPointerException
+     *              If the expected type is <code>null</code>
+     * @throws ELException
+     *              If there are syntax errors in the provided expression
+     */
     public abstract ValueExpression createValueExpression(ELContext context,
             String expression, Class<?> expectedType)
             throws NullPointerException, ELException;
@@ -96,6 +111,23 @@ public abstract class ExpressionFactory {
     public abstract ValueExpression createValueExpression(Object instance,
             Class<?> expectedType);
 
+    /**
+     * Create a new method expression instance.
+     *
+     * @param context            The EL context for this evaluation
+     * @param expression         The String representation of the method
+     *                           expression
+     * @param expectedReturnType The expected type of the result of invoking the
+     *                           method
+     * @param expectedParamTypes The expected types of the input parameters
+     *
+     * @return A new method expression formed from the input parameters.
+     *
+     * @throws NullPointerException
+     *              If the expected parameters types are <code>null</code>
+     * @throws ELException
+     *              If there are syntax errors in the provided expression
+     */
     public abstract MethodExpression createMethodExpression(ELContext context,
             String expression, Class<?> expectedReturnType,
             Class<?>[] expectedParamTypes) throws ELException,
@@ -195,12 +227,11 @@ public abstract class ExpressionFactory {
                 }
             }
             if (constructor == null) {
-                result = (ExpressionFactory) clazz.newInstance();
+                result = (ExpressionFactory) clazz.getDeclaredConstructor().newInstance();
             } else {
                 result =
                     (ExpressionFactory) constructor.newInstance(properties);
             }
-            
         } catch (InstantiationException e) {
             throw new ELException(
                     "Unable to create ExpressionFactory of type: " + clazz.getName(),
@@ -210,6 +241,10 @@ public abstract class ExpressionFactory {
                     "Unable to create ExpressionFactory of type: " + clazz.getName(),
                     e);
         } catch (IllegalArgumentException e) {
+            throw new ELException(
+                    "Unable to create ExpressionFactory of type: " + clazz.getName(),
+                    e);
+        } catch (NoSuchMethodException e) {
             throw new ELException(
                     "Unable to create ExpressionFactory of type: " + clazz.getName(),
                     e);
