@@ -5,9 +5,9 @@
  * The ASF licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -38,9 +38,12 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 import java.util.Stack;
 import java.util.TreeMap;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.atomic.AtomicLong;
 
 import javax.management.ListenerNotFoundException;
@@ -78,6 +81,7 @@ import javax.servlet.http.HttpSessionAttributeListener;
 import javax.servlet.http.HttpSessionListener;
 
 import org.apache.catalina.Authenticator;
+import org.apache.catalina.Cluster;
 import org.apache.catalina.Container;
 import org.apache.catalina.ContainerListener;
 import org.apache.catalina.Context;
@@ -120,6 +124,7 @@ import org.apache.juli.logging.LogFactory;
 import org.apache.naming.ContextBindings;
 import org.apache.naming.resources.BaseDirContext;
 import org.apache.naming.resources.DirContextURLStreamHandler;
+import org.apache.naming.resources.EmptyDirContext;
 import org.apache.naming.resources.FileDirContext;
 import org.apache.naming.resources.ProxyDirContext;
 import org.apache.naming.resources.WARDirContext;
@@ -203,7 +208,7 @@ public class StandardContext extends ContainerBase
      * &lt;multipart-config&gt; element.
      */
     protected boolean allowCasualMultipartParsing = false;
-     
+
     /**
      * Control whether remaining request data will be read
      * (swallowed) even if the request violates a data size constraint.
@@ -233,13 +238,13 @@ public class StandardContext extends ContainerBase
      */
     private boolean antiJARLocking = false;
 
-    
+
     /**
      * The antiResourceLocking flag for this Context.
      */
     private boolean antiResourceLocking = false;
 
-    
+
     /**
      * The set of application listener class names configured for this
      * application, in the order they were encountered in the resulting merged
@@ -247,16 +252,22 @@ public class StandardContext extends ContainerBase
      */
     private ApplicationListener applicationListeners[] =
             new ApplicationListener[0];
-    
+
     private final Object applicationListenersLock = new Object();
 
+    /**
+     * The set of application listeners that are required to have limited access
+     * to ServletContext methods. See Servlet 3.0 section 4.4.
+     */
+
+    private final Set<Object> noPluggabilityListeners = new HashSet<Object>();
 
     /**
      * The set of instantiated application event listener objects. Note that
      * SCIs and other code may use the pluggability APIs to add listener
      * instances directly to this list before the application starts.
      */
-    private Object applicationEventListenersObjects[] = 
+    private Object applicationEventListenersObjects[] =
         new Object[0];
 
 
@@ -265,7 +276,7 @@ public class StandardContext extends ContainerBase
      * SCIs and other code may use the pluggability APIs to add listener
      * instances directly to this list before the application starts.
      */
-    private Object applicationLifecycleListenersObjects[] = 
+    private Object applicationLifecycleListenersObjects[] =
         new Object[0];
 
 
@@ -274,8 +285,8 @@ public class StandardContext extends ContainerBase
      */
     private Map<ServletContainerInitializer,Set<Class<?>>> initializers =
         new LinkedHashMap<ServletContainerInitializer,Set<Class<?>>>();
-    
-    
+
+
     /**
      * The set of application parameters defined for this application.
      */
@@ -283,13 +294,13 @@ public class StandardContext extends ContainerBase
         new ApplicationParameter[0];
 
     private final Object applicationParametersLock = new Object();
-    
+
 
     /**
-     * The broadcaster that sends j2ee notifications. 
+     * The broadcaster that sends j2ee notifications.
      */
     private NotificationBroadcasterSupport broadcaster = null;
-    
+
     /**
      * The Locale to character set mapper for this application.
      */
@@ -320,7 +331,7 @@ public class StandardContext extends ContainerBase
      */
     private volatile SecurityConstraint constraints[] =
             new SecurityConstraint[0];
-    
+
     private final Object constraintsLock = new Object();
 
 
@@ -328,6 +339,13 @@ public class StandardContext extends ContainerBase
      * The ServletContext implementation associated with this Context.
      */
     protected ApplicationContext context = null;
+
+    /**
+     * The wrapped version of the associated ServletContext that is presented
+     * to listeners that are required to have limited access to ServletContext
+     * methods. See Servlet 3.0 section 4.4.
+     */
+    private NoPluggabilityServletContext noPluggabilityServletContext = null;
 
 
     /**
@@ -348,12 +366,12 @@ public class StandardContext extends ContainerBase
      */
     private boolean crossContext = false;
 
-    
+
     /**
      * Encoded path.
      */
     private String encodedPath = null;
-    
+
 
     /**
      * Unencoded path for this web application.
@@ -374,13 +392,13 @@ public class StandardContext extends ContainerBase
     private String displayName = null;
 
 
-    /** 
+    /**
      * Override the default context xml location.
      */
     private String defaultContextXml;
 
 
-    /** 
+    /**
      * Override the default web xml location.
      */
     private String defaultWebXml;
@@ -454,7 +472,7 @@ public class StandardContext extends ContainerBase
     /**
      * The mapper associated with this context.
      */
-    private org.apache.tomcat.util.http.mapper.Mapper mapper = 
+    private org.apache.tomcat.util.http.mapper.Mapper mapper =
         new org.apache.tomcat.util.http.mapper.Mapper();
 
 
@@ -493,7 +511,7 @@ public class StandardContext extends ContainerBase
      * The context initialization parameters for this web application,
      * keyed by name.
      */
-    private HashMap<String, String> parameters = new HashMap<String, String>();
+    private final ConcurrentMap<String, String> parameters = new ConcurrentHashMap<String, String>();
 
 
     /**
@@ -538,8 +556,8 @@ public class StandardContext extends ContainerBase
      * The original document root for this web application.
      */
     private String originalDocBase = null;
-    
-    
+
+
     /**
      * The privileged flag for this web application.
      */
@@ -578,7 +596,7 @@ public class StandardContext extends ContainerBase
      */
     private HashMap<String, String> servletMappings =
         new HashMap<String, String>();
-    
+
     private final Object servletMappingsLock = new Object();
 
 
@@ -591,7 +609,7 @@ public class StandardContext extends ContainerBase
      * The notification sequence number.
      */
     private AtomicLong sequenceNumber = new AtomicLong(0);
-    
+
     /**
      * The status code error pages for this web application, keyed by
      * HTTP status code (as an Integer). Note status code zero is used for the
@@ -730,9 +748,9 @@ public class StandardContext extends ContainerBase
     private long startTime;
     private long tldScanTime;
 
-    /** 
+    /**
      * Name of the engine. If null, the domain is used.
-     */ 
+     */
     private String j2EEApplication="none";
     private String j2EEServer="none";
 
@@ -765,47 +783,54 @@ public class StandardContext extends ContainerBase
      */
     private boolean saveConfig = true;
 
-    
+
     /**
      * The name to use for session cookies. <code>null</code> indicates that
      * the name is controlled by the application.
      */
     private String sessionCookieName;
-    
-    
+
+
     /**
      * The flag that indicates that session cookies should use HttpOnly
      */
     private boolean useHttpOnly = true;
 
-    
+
     /**
      * The domain to use for session cookies. <code>null</code> indicates that
      * the domain is controlled by the application.
      */
     private String sessionCookieDomain;
-    
-    
+
+
     /**
      * The path to use for session cookies. <code>null</code> indicates that
      * the path is controlled by the application.
      */
     private String sessionCookiePath;
-    
-    
+
+
     /**
      * Is a / added to the end of the session cookie path to ensure browsers,
      * particularly IE, don't send a session cookie for context /foo with
      * requests intended for context /foobar.
      */
-    private boolean sessionCookiePathUsesTrailingSlash = true;
+    private boolean sessionCookiePathUsesTrailingSlash = false;
 
 
     /**
      * The Jar scanner to use to search for Jars that might contain
-     * configuration information such as TLDs or web-fragment.xml files. 
+     * configuration information such as TLDs or web-fragment.xml files.
      */
     private JarScanner jarScanner = null;
+
+    /**
+     * Enables the RMI Target memory leak detection to be controlled. This is
+     * necessary since the detection can only work on Java 9 if some of the
+     * modularity checks are disabled.
+     */
+    private boolean clearReferencesRmiTargets = true;
 
     /**
      * Should Tomcat attempt to null out any static or final fields from loaded
@@ -814,10 +839,13 @@ public class StandardContext extends ContainerBase
      * some issues reported with log4j when this option is true. Applications
      * without memory leaks using recent JVMs should operate correctly with this
      * option set to <code>false</code>. If not specified, the default value of
-     * <code>false</code> will be used. 
+     * <code>false</code> will be used.
+     *
+     * @deprecated This option will be removed in Tomcat 8.5
      */
+    @Deprecated
     private boolean clearReferencesStatic = false;
-    
+
     /**
      * Should Tomcat attempt to terminate threads that have been started by the
      * web application? Stopping threads is performed via the deprecated (for
@@ -839,9 +867,9 @@ public class StandardContext extends ContainerBase
     /**
      * If an HttpClient keep-alive timer thread has been started by this web
      * application and is still running, should Tomcat change the context class
-     * loader from the current {@link WebappClassLoader} to
-     * {@link WebappClassLoader#parent} to prevent a memory leak? Note that the
-     * keep-alive timer thread will stop on its own once the keep-alives all
+     * loader from the current {@link WebappClassLoaderBase} to
+     * {@link WebappClassLoaderBase#parent} to prevent a memory leak? Note that
+     * the keep-alive timer thread will stop on its own once the keep-alives all
      * expire however, on a busy system that might not happen for some time.
      */
     private boolean clearReferencesHttpClientKeepAliveThread = true;
@@ -853,14 +881,14 @@ public class StandardContext extends ContainerBase
      * StandardThreadExecutor of ThreadPoolExecutor be set to a positive value.
      */
     private boolean renewThreadsWhenStoppingContext = true;
-    
+
     /**
      * Should the effective web.xml be logged when the context starts?
      */
     private boolean logEffectiveWebXml = false;
 
     private int effectiveMajorVersion = 3;
-    
+
     private int effectiveMinorVersion = 0;
 
     private JspConfigDescriptor jspConfigDescriptor =
@@ -871,7 +899,7 @@ public class StandardContext extends ContainerBase
     private String webappVersion = "";
 
     private boolean addWebinfClassesResources = false;
-    
+
     private boolean fireRequestListenersOnForwards = false;
 
     /**
@@ -895,9 +923,104 @@ public class StandardContext extends ContainerBase
 
     private Boolean failCtxIfServletStartFails;
 
+    private boolean validateClientProvidedNewSessionId = true;
+
+    private boolean mapperContextRootRedirectEnabled = true;
+
+    private boolean mapperDirectoryRedirectEnabled = false;
+
+    private boolean useRelativeRedirects = !Globals.STRICT_SERVLET_COMPLIANCE;
+
+    private boolean dispatchersUseEncodedPaths = true;
+
 
     // ----------------------------------------------------- Context Properties
-    
+
+    @Override
+    public void setDispatchersUseEncodedPaths(boolean dispatchersUseEncodedPaths) {
+        this.dispatchersUseEncodedPaths = dispatchersUseEncodedPaths;
+    }
+
+
+    /**
+     * {@inheritDoc}
+     * <p>
+     * The default value for this implementation is {@code true}.
+     */
+    @Override
+    public boolean getDispatchersUseEncodedPaths() {
+        return dispatchersUseEncodedPaths;
+    }
+
+
+    @Override
+    public void setUseRelativeRedirects(boolean useRelativeRedirects) {
+        this.useRelativeRedirects = useRelativeRedirects;
+    }
+
+
+    /**
+     * {@inheritDoc}
+     * <p>
+     * The default value for this implementation is {@code true}.
+     */
+    @Override
+    public boolean getUseRelativeRedirects() {
+        return useRelativeRedirects;
+    }
+
+
+    @Override
+    public void setMapperContextRootRedirectEnabled(boolean mapperContextRootRedirectEnabled) {
+        this.mapperContextRootRedirectEnabled = mapperContextRootRedirectEnabled;
+    }
+
+
+    /**
+     * {@inheritDoc}
+     * <p>
+     * The default value for this implementation is {@code false}.
+     */
+    @Override
+    public boolean getMapperContextRootRedirectEnabled() {
+        return mapperContextRootRedirectEnabled;
+    }
+
+
+    @Override
+    public void setMapperDirectoryRedirectEnabled(boolean mapperDirectoryRedirectEnabled) {
+        this.mapperDirectoryRedirectEnabled = mapperDirectoryRedirectEnabled;
+    }
+
+
+    /**
+     * {@inheritDoc}
+     * <p>
+     * The default value for this implementation is {@code false}.
+     */
+    @Override
+    public boolean getMapperDirectoryRedirectEnabled() {
+        return mapperDirectoryRedirectEnabled;
+    }
+
+
+    @Override
+    public void setValidateClientProvidedNewSessionId(boolean validateClientProvidedNewSessionId) {
+        this.validateClientProvidedNewSessionId = validateClientProvidedNewSessionId;
+    }
+
+
+    /**
+     * {@inheritDoc}
+     * <p>
+     * The default value for this implementation is {@code true}.
+     */
+    @Override
+    public boolean getValidateClientProvidedNewSessionId() {
+        return validateClientProvidedNewSessionId;
+    }
+
+
     @Override
     public void setContainerSciFilter(String containerSciFilter) {
         this.containerSciFilter = containerSciFilter;
@@ -984,7 +1107,9 @@ public class StandardContext extends ContainerBase
         StringBuilder result = new StringBuilder();
         boolean first = true;
         for (String servletName : resourceOnlyServlets) {
-            if (!first) {
+            if (first) {
+                first = false;
+            } else {
                 result.append(',');
             }
             result.append(servletName);
@@ -1033,12 +1158,12 @@ public class StandardContext extends ContainerBase
     public void setEffectiveMinorVersion(int effectiveMinorVersion) {
         this.effectiveMinorVersion = effectiveMinorVersion;
     }
-    
+
     @Override
     public void setLogEffectiveWebXml(boolean logEffectiveWebXml) {
         this.logEffectiveWebXml = logEffectiveWebXml;
     }
-    
+
     @Override
     public boolean getLogEffectiveWebXml() {
         return logEffectiveWebXml;
@@ -1048,7 +1173,7 @@ public class StandardContext extends ContainerBase
     public Authenticator getAuthenticator() {
         if (this instanceof Authenticator)
             return (Authenticator) this;
-        
+
         Pipeline pipeline = getPipeline();
         if (pipeline != null) {
             Valve basic = pipeline.getBasic();
@@ -1062,7 +1187,7 @@ public class StandardContext extends ContainerBase
         }
         return null;
     }
-    
+
     @Override
     public JarScanner getJarScanner() {
         if (jarScanner == null) {
@@ -1077,7 +1202,7 @@ public class StandardContext extends ContainerBase
         this.jarScanner = jarScanner;
     }
 
-     
+
     @Override
     public InstanceManager getInstanceManager() {
        return instanceManager;
@@ -1089,7 +1214,7 @@ public class StandardContext extends ContainerBase
        this.instanceManager = instanceManager;
     }
 
-    
+
     @Override
     public String getEncodedPath() {
         return encodedPath;
@@ -1228,7 +1353,7 @@ public class StandardContext extends ContainerBase
 
 
     /**
-     * Return the list of resource aliases. 
+     * Return the list of resource aliases.
      */
     public String getAliases() {
         return this.aliases;
@@ -1273,11 +1398,11 @@ public class StandardContext extends ContainerBase
     public void setAliases(String aliases) {
         this.aliases = aliases;
     }
-    
-    
+
+
     /**
      * Add a ServletContainerInitializer instance to this web application.
-     * 
+     *
      * @param sci       The instance to add
      * @param classes   The classes in which the initializer expressed an
      *                  interest
@@ -1288,7 +1413,7 @@ public class StandardContext extends ContainerBase
         initializers.put(sci, classes);
     }
 
-    
+
     /**
      * Return the "follow standard delegation model" flag used to configure
      * our ClassLoader.
@@ -1384,8 +1509,8 @@ public class StandardContext extends ContainerBase
         newListeners[len] = listener;
         applicationEventListenersObjects = newListeners;
     }
-    
-    
+
+
     /**
      * Return the set of initialized application lifecycle listener objects,
      * in the order they were specified in the web application deployment
@@ -1425,7 +1550,7 @@ public class StandardContext extends ContainerBase
         applicationLifecycleListenersObjects = newListeners;
     }
 
-    
+
     /**
      * Return the antiJARLocking flag for this Context.
      */
@@ -1500,7 +1625,7 @@ public class StandardContext extends ContainerBase
         if (this.charsetMapper == null) {
             try {
                 Class<?> clazz = Class.forName(charsetMapperClass);
-                this.charsetMapper = (CharsetMapper) clazz.newInstance();
+                this.charsetMapper = (CharsetMapper) clazz.getDeclaredConstructor().newInstance();
             } catch (Throwable t) {
                 ExceptionUtils.handleThrowable(t);
                 this.charsetMapper = new CharsetMapper();
@@ -1615,12 +1740,12 @@ public class StandardContext extends ContainerBase
                                    this.cookies);
 
     }
-    
-    
+
+
     /**
      * Gets the name to use for session cookies. Overrides any setting that
      * may be specified by the application.
-     * 
+     *
      * @return  The value of the default session cookie name or null if not
      *          specified
      */
@@ -1628,12 +1753,12 @@ public class StandardContext extends ContainerBase
     public String getSessionCookieName() {
         return sessionCookieName;
     }
-    
-    
+
+
     /**
      * Sets the name to use for session cookies. Overrides any setting that
      * may be specified by the application.
-     * 
+     *
      * @param sessionCookieName   The name to use
      */
     @Override
@@ -1644,10 +1769,10 @@ public class StandardContext extends ContainerBase
                 oldSessionCookieName, sessionCookieName);
     }
 
-    
+
     /**
      * Gets the value of the use HttpOnly cookies for session cookies flag.
-     * 
+     *
      * @return <code>true</code> if the HttpOnly flag should be set on session
      *         cookies
      */
@@ -1659,7 +1784,7 @@ public class StandardContext extends ContainerBase
 
     /**
      * Sets the use HttpOnly cookies for session cookies flag.
-     * 
+     *
      * @param useHttpOnly   Set to <code>true</code> to use HttpOnly cookies
      *                          for session cookies
      */
@@ -1671,12 +1796,12 @@ public class StandardContext extends ContainerBase
                 oldUseHttpOnly,
                 this.useHttpOnly);
     }
-    
-    
+
+
     /**
      * Gets the domain to use for session cookies. Overrides any setting that
      * may be specified by the application.
-     * 
+     *
      * @return  The value of the default session cookie domain or null if not
      *          specified
      */
@@ -1684,12 +1809,12 @@ public class StandardContext extends ContainerBase
     public String getSessionCookieDomain() {
         return sessionCookieDomain;
     }
-    
-    
+
+
     /**
      * Sets the domain to use for session cookies. Overrides any setting that
      * may be specified by the application.
-     * 
+     *
      * @param sessionCookieDomain   The domain to use
      */
     @Override
@@ -1699,12 +1824,12 @@ public class StandardContext extends ContainerBase
         support.firePropertyChange("sessionCookieDomain",
                 oldSessionCookieDomain, sessionCookieDomain);
     }
-    
+
 
     /**
      * Gets the path to use for session cookies. Overrides any setting that
      * may be specified by the application.
-     * 
+     *
      * @return  The value of the default session cookie path or null if not
      *          specified
      */
@@ -1712,12 +1837,12 @@ public class StandardContext extends ContainerBase
     public String getSessionCookiePath() {
         return sessionCookiePath;
     }
-    
-    
+
+
     /**
      * Sets the path to use for session cookies. Overrides any setting that
      * may be specified by the application.
-     * 
+     *
      * @param sessionCookiePath   The path to use
      */
     @Override
@@ -1727,7 +1852,7 @@ public class StandardContext extends ContainerBase
         support.firePropertyChange("sessionCookiePath",
                 oldSessionCookiePath, sessionCookiePath);
     }
-    
+
 
     @Override
     public boolean getSessionCookiePathUsesTrailingSlash() {
@@ -1774,12 +1899,12 @@ public class StandardContext extends ContainerBase
         return defaultContextXml;
     }
 
-    /** 
+    /**
      * Set the location of the default context xml that will be used.
      * If not absolute, it'll be made relative to the engine's base dir
      * ( which defaults to catalina.base system property ).
      *
-     * @param defaultContextXml The default web xml 
+     * @param defaultContextXml The default web xml
      */
     public void setDefaultContextXml(String defaultContextXml) {
         this.defaultContextXml = defaultContextXml;
@@ -1789,12 +1914,12 @@ public class StandardContext extends ContainerBase
         return defaultWebXml;
     }
 
-    /** 
+    /**
      * Set the location of the default web xml that will be used.
      * If not absolute, it'll be made relative to the engine's base dir
      * ( which defaults to catalina.base system property ).
      *
-     * @param defaultWebXml The default web xml 
+     * @param defaultWebXml The default web xml
      */
     public void setDefaultWebXml(String defaultWebXml) {
         this.defaultWebXml = defaultWebXml;
@@ -1908,15 +2033,6 @@ public class StandardContext extends ContainerBase
         support.firePropertyChange("distributable",
                                    oldDistributable,
                                    this.distributable);
-
-        // Bugzilla 32866
-        if(getManager() != null) {
-            if(log.isDebugEnabled()) {
-                log.debug("Propagating distributable=" + distributable
-                          + " to manager");
-            }
-            getManager().setDistributable(distributable);
-        }
     }
 
 
@@ -1975,31 +2091,18 @@ public class StandardContext extends ContainerBase
 
 
     /**
-     * Set the Loader with which this Context is associated.
-     *
-     * @param loader The newly associated loader
-     */
-    @Override
-    public synchronized void setLoader(Loader loader) {
-
-        super.setLoader(loader);
-
-    }
-
-
-    /**
      * Return the boolean on the annotations parsing.
      */
     @Override
     public boolean getIgnoreAnnotations() {
         return this.ignoreAnnotations;
     }
-    
-    
+
+
     /**
-     * Set the boolean on the annotations parsing for this web 
+     * Set the boolean on the annotations parsing for this web
      * application.
-     * 
+     *
      * @param ignoreAnnotations The boolean on the annotations parsing
      */
     @Override
@@ -2009,8 +2112,8 @@ public class StandardContext extends ContainerBase
         support.firePropertyChange("ignoreAnnotations", oldIgnoreAnnotations,
                 this.ignoreAnnotations);
     }
-    
-    
+
+
     /**
      * Return the login configuration descriptor for this web application.
      */
@@ -2109,7 +2212,7 @@ public class StandardContext extends ContainerBase
         }
         support.firePropertyChange("namingResources",
                                    oldNamingResources, this.namingResources);
-        
+
         if (getState() == LifecycleState.NEW ||
                 getState() == LifecycleState.INITIALIZING ||
                 getState() == LifecycleState.INITIALIZED) {
@@ -2120,12 +2223,12 @@ public class StandardContext extends ContainerBase
             // file
             // If started now, a second start will be attempted when the context
             // starts
-            
+
             // In both cases, return and let context init the namingResources
             // when it starts
             return;
         }
-        
+
         if (oldNamingResources != null) {
             try {
                 oldNamingResources.stop();
@@ -2156,19 +2259,30 @@ public class StandardContext extends ContainerBase
 
     /**
      * Set the context path for this Context.
-     * 
+     *
      * @param path The new context path
      */
     @Override
     public void setPath(String path) {
-        if (path == null || (!path.equals("") && !path.startsWith("/"))) {
+        boolean invalid = false;
+        if (path == null || path.equals("/")) {
+            invalid = true;
+            this.path = "";
+        } else if ("".equals(path) || path.startsWith("/")) {
+            this.path = path;
+        } else {
+            invalid = true;
             this.path = "/" + path;
+        }
+        if (this.path.endsWith("/")) {
+            invalid = true;
+            this.path = this.path.substring(0, this.path.length() - 1);
+        }
+        if (invalid) {
             log.warn(sm.getString(
                     "standardContext.pathInvalid", path, this.path));
-        } else {
-            this.path = path;
         }
-        encodedPath = urlEncoder.encode(this.path);
+        encodedPath = urlEncoder.encode(this.path, "UTF-8");
         if (getName() == null) {
             setName(this.path);
         }
@@ -2250,7 +2364,7 @@ public class StandardContext extends ContainerBase
 
         this.originalDocBase = docBase;
     }
-    
+
 
     /**
      * Return the parent class loader (if any) for this web application.
@@ -2269,7 +2383,7 @@ public class StandardContext extends ContainerBase
         return (ClassLoader.getSystemClassLoader());
     }
 
-    
+
     /**
      * Return the privileged flag for this web application.
      */
@@ -2453,7 +2567,7 @@ public class StandardContext extends ContainerBase
     /**
      * Set the value of the unloadDelay flag, which represents the amount
      * of ms that the container will wait when unloading servlets.
-     * Setting this to a small value may cause more requests to fail 
+     * Setting this to a small value may cause more requests to fail
      * to complete when stopping a web application.
      *
      * @param unloadDelay The new value
@@ -2526,7 +2640,7 @@ public class StandardContext extends ContainerBase
         this.wrapperClassName = wrapperClassName;
 
         try {
-            wrapperClass = Class.forName(wrapperClassName);         
+            wrapperClass = Class.forName(wrapperClassName);
             if (!StandardWrapper.class.isAssignableFrom(wrapperClass)) {
                 throw new IllegalArgumentException(
                     sm.getString("standardContext.invalidWrapperClass",
@@ -2549,7 +2663,7 @@ public class StandardContext extends ContainerBase
 
         if (getState().isAvailable()) {
             throw new IllegalStateException
-                (sm.getString("standardContext.resources.started"));
+                (sm.getString("standardContext.resourcesStart"));
         }
 
         DirContext oldResources = this.webappResources;
@@ -2573,14 +2687,14 @@ public class StandardContext extends ContainerBase
         this.webappResources = resources;
 
         // The proxied resources will be refreshed on start
-        this.resources = null;
+        super.setResources(null);
 
         support.firePropertyChange("resources", oldResources,
                                    this.webappResources);
 
     }
 
-    
+
     @Override
     public JspConfigDescriptor getJspConfigDescriptor() {
         return jspConfigDescriptor;
@@ -2638,9 +2752,9 @@ public class StandardContext extends ContainerBase
 
     /** Get the absolute path to the work dir.
      *  To avoid duplication.
-     * 
+     *
      * @return The work path
-     */ 
+     */
     public String getWorkPath() {
         if (getWorkDir() == null) {
             return null;
@@ -2660,7 +2774,7 @@ public class StandardContext extends ContainerBase
         }
         return workDir.getAbsolutePath();
     }
-    
+
     /**
      * Return the work directory for this Context.
      */
@@ -2686,6 +2800,19 @@ public class StandardContext extends ContainerBase
     }
 
 
+    public boolean getClearReferencesRmiTargets() {
+        return this.clearReferencesRmiTargets;
+    }
+
+
+    public void setClearReferencesRmiTargets(boolean clearReferencesRmiTargets) {
+        boolean oldClearReferencesRmiTargets = this.clearReferencesRmiTargets;
+        this.clearReferencesRmiTargets = clearReferencesRmiTargets;
+        support.firePropertyChange("clearReferencesRmiTargets",
+                oldClearReferencesRmiTargets, this.clearReferencesRmiTargets);
+    }
+
+
     /**
      * Save config ?
      */
@@ -2706,7 +2833,10 @@ public class StandardContext extends ContainerBase
 
     /**
      * Return the clearReferencesStatic flag for this Context.
+     *
+     * @deprecated This option will be removed in Tomcat 8.5
      */
+    @Deprecated
     public boolean getClearReferencesStatic() {
 
         return (this.clearReferencesStatic);
@@ -2718,7 +2848,10 @@ public class StandardContext extends ContainerBase
      * Set the clearReferencesStatic feature for this Context.
      *
      * @param clearReferencesStatic The new flag value
+     *
+     * @deprecated This option will be removed in Tomcat 8.5
      */
+    @Deprecated
     public void setClearReferencesStatic(boolean clearReferencesStatic) {
 
         boolean oldClearReferencesStatic = this.clearReferencesStatic;
@@ -3061,7 +3194,7 @@ public class StandardContext extends ContainerBase
         fireContainerEvent("addFilterMap", filterMap);
     }
 
-    
+
     /**
      * Add a filter mapping to this Context before the mappings defined in the
      * deployment descriptor but after any other mappings added via this method.
@@ -3093,8 +3226,8 @@ public class StandardContext extends ContainerBase
             throw new IllegalArgumentException
                 (sm.getString("standardContext.filterMap.name", filterName));
 
-        if (!filterMap.getMatchAllServletNames() && 
-            !filterMap.getMatchAllUrlPatterns() && 
+        if (!filterMap.getMatchAllServletNames() &&
+            !filterMap.getMatchAllUrlPatterns() &&
             (servletNames.length == 0) && (urlPatterns.length == 0))
             throw new IllegalArgumentException
                 (sm.getString("standardContext.filterMap.either"));
@@ -3205,19 +3338,20 @@ public class StandardContext extends ContainerBase
     @Override
     public void addParameter(String name, String value) {
         // Validate the proposed context initialization parameter
-        if ((name == null) || (value == null))
+        if ((name == null) || (value == null)) {
             throw new IllegalArgumentException
                 (sm.getString("standardContext.parameter.required"));
-        if (parameters.get(name) != null)
-            throw new IllegalArgumentException
-                (sm.getString("standardContext.parameter.duplicate", name));
-
-        // Add this parameter to our defined set
-        synchronized (parameters) {
-            parameters.put(name, value);
         }
-        fireContainerEvent("addParameter", name);
 
+        // Add this parameter to our defined set if not already present
+        String oldValue = parameters.putIfAbsent(name, value);
+
+        if (oldValue != null) {
+            throw new IllegalArgumentException(
+                    sm.getString("standardContext.parameter.duplicate", name));
+        }
+
+        fireContainerEvent("addParameter", name);
     }
 
 
@@ -3422,11 +3556,11 @@ public class StandardContext extends ContainerBase
         Wrapper wrapper = null;
         if (wrapperClass != null) {
             try {
-                wrapper = (Wrapper) wrapperClass.newInstance();
+                wrapper = (Wrapper) wrapperClass.getDeclaredConstructor().newInstance();
             } catch (Throwable t) {
                 ExceptionUtils.handleThrowable(t);
                 log.error("createWrapper", t);
-                return (null);
+                return null;
             }
         } else {
             wrapper = new StandardWrapper();
@@ -3452,12 +3586,12 @@ public class StandardContext extends ContainerBase
                 try {
                     Class<?> clazz = Class.forName(wrapperLifecycles[i]);
                     LifecycleListener listener =
-                        (LifecycleListener) clazz.newInstance();
+                        (LifecycleListener) clazz.getDeclaredConstructor().newInstance();
                     wrapper.addLifecycleListener(listener);
                 } catch (Throwable t) {
                     ExceptionUtils.handleThrowable(t);
                     log.error("createWrapper", t);
-                    return (null);
+                    return null;
                 }
             }
         }
@@ -3467,18 +3601,17 @@ public class StandardContext extends ContainerBase
                 try {
                     Class<?> clazz = Class.forName(wrapperListeners[i]);
                     ContainerListener listener =
-                      (ContainerListener) clazz.newInstance();
+                            (ContainerListener) clazz.getDeclaredConstructor().newInstance();
                     wrapper.addContainerListener(listener);
                 } catch (Throwable t) {
                     ExceptionUtils.handleThrowable(t);
                     log.error("createWrapper", t);
-                    return (null);
+                    return null;
                 }
             }
         }
 
-        return (wrapper);
-
+        return wrapper;
     }
 
 
@@ -3494,7 +3627,7 @@ public class StandardContext extends ContainerBase
         for (ApplicationListener applicationListener: applicationListeners) {
             list.add(applicationListener.getClassName());
         }
-        
+
         return list.toArray(new String[list.size()]);
 
     }
@@ -3644,8 +3777,8 @@ public class StandardContext extends ContainerBase
     public Context findMappingObject() {
         return (Context) getMappingObject();
     }
-    
-    
+
+
     /**
      * Return the message destination with the specified name, if any;
      * otherwise, return <code>null</code>.
@@ -3742,11 +3875,7 @@ public class StandardContext extends ContainerBase
      */
     @Override
     public String findParameter(String name) {
-
-        synchronized (parameters) {
-            return (parameters.get(name));
-        }
-
+        return parameters.get(name);
     }
 
 
@@ -3757,12 +3886,9 @@ public class StandardContext extends ContainerBase
      */
     @Override
     public String[] findParameters() {
-
-        synchronized (parameters) {
-            String results[] = new String[parameters.size()];
-            return (parameters.keySet().toArray(results));
-        }
-
+        List<String> parameterNames = new ArrayList<String>(parameters.size());
+        parameterNames.addAll(parameters.keySet());
+        return parameterNames.toArray(new String[parameterNames.size()]);
     }
 
 
@@ -3913,7 +4039,7 @@ public class StandardContext extends ContainerBase
 
 
     /**
-     * Return the set of watched resources for this Context. If none are 
+     * Return the set of watched resources for this Context. If none are
      * defined, a zero length array will be returned.
      */
     @Override
@@ -3922,8 +4048,8 @@ public class StandardContext extends ContainerBase
             return watchedResources;
         }
     }
-    
-    
+
+
     /**
      * Return the set of welcome files defined for this Context.  If none are
      * defined, a zero-length array is returned.
@@ -4030,7 +4156,7 @@ public class StandardContext extends ContainerBase
 
         synchronized (applicationListenersLock) {
 
-            // Make sure this welcome file is currently present
+            // Make sure this listener is currently present
             int n = -1;
             for (int i = 0; i < applicationListeners.length; i++) {
                 if (applicationListeners[i].getClassName().equals(listener)) {
@@ -4041,7 +4167,7 @@ public class StandardContext extends ContainerBase
             if (n < 0)
                 return;
 
-            // Remove the specified constraint
+            // Remove the specified listener
             int j = 0;
             ApplicationListener results[] =
                     new ApplicationListener[applicationListeners.length - 1];
@@ -4230,7 +4356,7 @@ public class StandardContext extends ContainerBase
 
         synchronized (instanceListenersLock) {
 
-            // Make sure this welcome file is currently present
+            // Make sure this listener is currently present
             int n = -1;
             for (int i = 0; i < instanceListeners.length; i++) {
                 if (instanceListeners[i].equals(listener)) {
@@ -4241,7 +4367,7 @@ public class StandardContext extends ContainerBase
             if (n < 0)
                 return;
 
-            // Remove the specified constraint
+            // Remove the specified listener
             int j = 0;
             String results[] = new String[instanceListeners.length - 1];
             for (int i = 0; i < instanceListeners.length; i++) {
@@ -4311,12 +4437,8 @@ public class StandardContext extends ContainerBase
      */
     @Override
     public void removeParameter(String name) {
-
-        synchronized (parameters) {
-            parameters.remove(name);
-        }
+        parameters.remove(name);
         fireContainerEvent("removeParameter", name);
-
     }
 
 
@@ -4400,12 +4522,12 @@ public class StandardContext extends ContainerBase
     /**
      * Remove the specified watched resource name from the list associated
      * with this Context.
-     * 
+     *
      * @param name Name of the watched resource to be removed
      */
     @Override
     public void removeWatchedResource(String name) {
-        
+
         synchronized (watchedResourcesLock) {
 
             // Make sure this watched resource is currently present
@@ -4433,8 +4555,8 @@ public class StandardContext extends ContainerBase
         fireContainerEvent("removeWatchedResource", name);
 
     }
-    
-    
+
+
     /**
      * Remove the specified welcome file name from the list recognized
      * by this Context.
@@ -4457,7 +4579,7 @@ public class StandardContext extends ContainerBase
             if (n < 0)
                 return;
 
-            // Remove the specified constraint
+            // Remove the specified welcome file
             int j = 0;
             String results[] = new String[welcomeFiles.length - 1];
             for (int i = 0; i < welcomeFiles.length; i++) {
@@ -4487,7 +4609,7 @@ public class StandardContext extends ContainerBase
 
         synchronized (wrapperLifecyclesLock) {
 
-            // Make sure this welcome file is currently present
+            // Make sure this lifecycle listener is currently present
             int n = -1;
             for (int i = 0; i < wrapperLifecycles.length; i++) {
                 if (wrapperLifecycles[i].equals(listener)) {
@@ -4498,7 +4620,7 @@ public class StandardContext extends ContainerBase
             if (n < 0)
                 return;
 
-            // Remove the specified constraint
+            // Remove the specified lifecycle listener
             int j = 0;
             String results[] = new String[wrapperLifecycles.length - 1];
             for (int i = 0; i < wrapperLifecycles.length; i++) {
@@ -4527,7 +4649,7 @@ public class StandardContext extends ContainerBase
 
         synchronized (wrapperListenersLock) {
 
-            // Make sure this welcome file is currently present
+            // Make sure this listener is currently present
             int n = -1;
             for (int i = 0; i < wrapperListeners.length; i++) {
                 if (wrapperListeners[i].equals(listener)) {
@@ -4538,7 +4660,7 @@ public class StandardContext extends ContainerBase
             if (n < 0)
                 return;
 
-            // Remove the specified constraint
+            // Remove the specified listener
             int j = 0;
             String results[] = new String[wrapperListeners.length - 1];
             for (int i = 0; i < wrapperListeners.length; i++) {
@@ -4563,7 +4685,7 @@ public class StandardContext extends ContainerBase
      * StandardContext
      */
     public long getProcessingTime() {
-        
+
         long result = 0;
 
         Container[] children = findChildren();
@@ -4740,7 +4862,7 @@ public class StandardContext extends ContainerBase
         /**
          * Add a filter mapping at the end of the current set of filter
          * mappings.
-         * 
+         *
          * @param filterMap
          *            The filter mapping to be added
          */
@@ -4755,7 +4877,7 @@ public class StandardContext extends ContainerBase
         /**
          * Add a filter mapping before the mappings defined in the deployment
          * descriptor but after any other mappings added via this method.
-         * 
+         *
          * @param filterMap
          *            The filter mapping to be added
          */
@@ -4818,15 +4940,14 @@ public class StandardContext extends ContainerBase
         boolean ok = true;
         synchronized (filterConfigs) {
             filterConfigs.clear();
-            Iterator<String> names = filterDefs.keySet().iterator();
-            while (names.hasNext()) {
-                String name = names.next();
+            for (Entry<String, FilterDef> entry : filterDefs.entrySet()) {
+                String name = entry.getKey();
                 if (getLogger().isDebugEnabled())
                     getLogger().debug(" Starting filter '" + name + "'");
                 ApplicationFilterConfig filterConfig = null;
                 try {
                     filterConfig =
-                        new ApplicationFilterConfig(this, filterDefs.get(name));
+                        new ApplicationFilterConfig(this, entry.getValue());
                     filterConfigs.put(name, filterConfig);
                 } catch (Throwable t) {
                     t = ExceptionUtils.unwrapInvocationTargetException(t);
@@ -4855,12 +4976,10 @@ public class StandardContext extends ContainerBase
 
         // Release all Filter and FilterConfig instances
         synchronized (filterConfigs) {
-            Iterator<String> names = filterConfigs.keySet().iterator();
-            while (names.hasNext()) {
-                String name = names.next();
+            for (Entry<String, ApplicationFilterConfig> entry : filterConfigs.entrySet()) {
                 if (getLogger().isDebugEnabled())
-                    getLogger().debug(" Stopping filter '" + name + "'");
-                ApplicationFilterConfig filterConfig = filterConfigs.get(name);
+                    getLogger().debug(" Stopping filter '" + entry.getKey() + "'");
+                ApplicationFilterConfig filterConfig = entry.getValue();
                 filterConfig.release();
             }
             filterConfigs.clear();
@@ -4897,14 +5016,13 @@ public class StandardContext extends ContainerBase
         ApplicationListener listeners[] = applicationListeners;
         Object results[] = new Object[listeners.length];
         boolean ok = true;
-        Set<Object> noPluggabilityListeners = new HashSet<Object>();
         for (int i = 0; i < results.length; i++) {
             if (getLogger().isDebugEnabled())
                 getLogger().debug(" Configuring event listener class '" +
                     listeners[i] + "'");
             try {
                 ApplicationListener listener = listeners[i];
-                results[i] = instanceManager.newInstance(
+                results[i] = getInstanceManager().newInstance(
                         listener.getClassName());
                 if (listener.isPluggabilityBlocked()) {
                     noPluggabilityListeners.add(results[i]);
@@ -4964,18 +5082,17 @@ public class StandardContext extends ContainerBase
         // Ensure context is not null
         getServletContext();
         context.setNewServletContextListenerAllowed(false);
-        
+
         Object instances[] = getApplicationLifecycleListeners();
         if (instances == null || instances.length == 0) {
             return ok;
         }
 
-        ServletContextEvent event =
-                new ServletContextEvent(getServletContext());
+        ServletContextEvent event = new ServletContextEvent(getServletContext());
         ServletContextEvent tldEvent = null;
         if (noPluggabilityListeners.size() > 0) {
-            tldEvent = new ServletContextEvent(new NoPluggabilityServletContext(
-                    getServletContext()));
+            noPluggabilityServletContext = new NoPluggabilityServletContext(getServletContext());
+            tldEvent = new ServletContextEvent(noPluggabilityServletContext);
         }
         for (int i = 0; i < instances.length; i++) {
             if (instances[i] == null)
@@ -5019,8 +5136,11 @@ public class StandardContext extends ContainerBase
         boolean ok = true;
         Object listeners[] = getApplicationLifecycleListeners();
         if (listeners != null) {
-            ServletContextEvent event =
-                new ServletContextEvent(getServletContext());
+            ServletContextEvent event = new ServletContextEvent(getServletContext());
+            ServletContextEvent tldEvent = null;
+            if (noPluggabilityServletContext != null) {
+                tldEvent = new ServletContextEvent(noPluggabilityServletContext);
+            }
             for (int i = 0; i < listeners.length; i++) {
                 int j = (listeners.length - 1) - i;
                 if (listeners[j] == null)
@@ -5030,7 +5150,11 @@ public class StandardContext extends ContainerBase
                         (ServletContextListener) listeners[j];
                     try {
                         fireContainerEvent("beforeContextDestroyed", listener);
-                        listener.contextDestroyed(event);
+                        if (noPluggabilityListeners.contains(listener)) {
+                            listener.contextDestroyed(tldEvent);
+                        } else {
+                            listener.contextDestroyed(event);
+                        }
                         fireContainerEvent("afterContextDestroyed", listener);
                     } catch (Throwable t) {
                         ExceptionUtils.handleThrowable(t);
@@ -5042,7 +5166,9 @@ public class StandardContext extends ContainerBase
                     }
                 }
                 try {
-                    getInstanceManager().destroyInstance(listeners[j]);
+                    if (getInstanceManager() != null) {
+                        getInstanceManager().destroyInstance(listeners[j]);
+                    }
                 } catch (Throwable t) {
                     t = ExceptionUtils.unwrapInvocationTargetException(t);
                     ExceptionUtils.handleThrowable(t);
@@ -5062,7 +5188,9 @@ public class StandardContext extends ContainerBase
                 if (listeners[j] == null)
                     continue;
                 try {
-                    getInstanceManager().destroyInstance(listeners[j]);
+                    if (getInstanceManager() != null) {
+                        getInstanceManager().destroyInstance(listeners[j]);
+                    }
                 } catch (Throwable t) {
                     t = ExceptionUtils.unwrapInvocationTargetException(t);
                     ExceptionUtils.handleThrowable(t);
@@ -5073,12 +5201,14 @@ public class StandardContext extends ContainerBase
                 }
             }
         }
-        
+
         setApplicationEventListeners(null);
         setApplicationLifecycleListeners(null);
 
-        return (ok);
+        noPluggabilityServletContext = null;
+        noPluggabilityListeners.clear();
 
+        return ok;
     }
 
 
@@ -5114,7 +5244,7 @@ public class StandardContext extends ContainerBase
                 ((BaseDirContext) webappResources).allocate();
                 // Alias support
                 ((BaseDirContext) webappResources).setAliases(getAliases());
-                
+
                 if (effectiveMajorVersion >=3 && addWebinfClassesResources) {
                     try {
                         DirContext webInfCtx =
@@ -5130,18 +5260,18 @@ public class StandardContext extends ContainerBase
                 }
             }
             // Register the cache in JMX
-            if (isCachingAllowed()) {
+            if (isCachingAllowed() && proxyDirContext.getCache() != null) {
                 String contextName = getName();
                 if (!contextName.startsWith("/")) {
                     contextName = "/" + contextName;
                 }
-                ObjectName resourcesName = 
-                    new ObjectName(this.getDomain() + ":type=Cache,host=" 
+                ObjectName resourcesName =
+                    new ObjectName(this.getDomain() + ":type=Cache,host="
                                    + getHostname() + ",context=" + contextName);
                 Registry.getRegistry(null, null).registerComponent
                     (proxyDirContext.getCache(), resourcesName, null);
             }
-            this.resources = proxyDirContext;
+            super.setResources(proxyDirContext);
         } catch (Throwable t) {
             ExceptionUtils.handleThrowable(t);
             log.error(sm.getString("standardContext.resourcesStart"), t);
@@ -5160,6 +5290,8 @@ public class StandardContext extends ContainerBase
 
         boolean ok = true;
 
+
+        DirContext resources = getResourcesInternal();
         try {
             if (resources != null) {
                 if (resources instanceof Lifecycle) {
@@ -5174,10 +5306,10 @@ public class StandardContext extends ContainerBase
                     if (!contextName.startsWith("/")) {
                         contextName = "/" + contextName;
                     }
-                    ObjectName resourcesName = 
+                    ObjectName resourcesName =
                         new ObjectName(this.getDomain()
-                                       + ":type=Cache,host=" 
-                                       + getHostname() + ",context=" 
+                                       + ":type=Cache,host="
+                                       + getHostname() + ",context="
                                        + contextName);
                     Registry.getRegistry(null, null)
                         .unregisterComponent(resourcesName);
@@ -5189,7 +5321,7 @@ public class StandardContext extends ContainerBase
             ok = false;
         }
 
-        this.resources = null;
+        super.setResources(null);
 
         return (ok);
 
@@ -5228,11 +5360,12 @@ public class StandardContext extends ContainerBase
                 try {
                     wrapper.load();
                 } catch (ServletException e) {
-                    getLogger().error(sm.getString("standardWrapper.loadException",
-                                      getName()), StandardWrapper.getRootCause(e));
+                    getLogger().error(sm.getString("standardContext.loadOnStartup.loadException",
+                          getName(), wrapper.getName()), StandardWrapper.getRootCause(e));
                     // NOTE: load errors (including a servlet that throws
-                    // UnavailableException from tht init() method) are NOT
-                    // fatal to application startup, excepted if failDeploymentIfServletLoadedOnStartupFails is specified
+                    // UnavailableException from the init() method) are NOT
+                    // fatal to application startup
+                    // unless failCtxIfServletStartFails="true" is specified
                     if(getComputedFailCtxIfServletStartFails()) {
                         return false;
                     }
@@ -5257,7 +5390,7 @@ public class StandardContext extends ContainerBase
         if(log.isDebugEnabled())
             log.debug("Starting " + getBaseName());
 
-        // Send j2ee.state.starting notification 
+        // Send j2ee.state.starting notification
         if (this.getObjectName() != null) {
             Notification notification = new Notification("j2ee.state.starting",
                     this.getObjectName(), sequenceNumber.getAndIncrement());
@@ -5272,19 +5405,23 @@ public class StandardContext extends ContainerBase
         if (namingResources != null) {
             namingResources.start();
         }
-        
+
         // Add missing components as necessary
         if (webappResources == null) {   // (1) Required by Loader
             if (log.isDebugEnabled())
                 log.debug("Configuring default Resources");
             try {
-                if ((getDocBase() != null) && (getDocBase().endsWith(".war")) &&
-                        (!(new File(getBasePath())).isDirectory()))
+                String docBase = getDocBase();
+                if (docBase == null) {
+                    setResources(new EmptyDirContext());
+                } else if (docBase.endsWith(".war")
+                        && !(new File(getBasePath())).isDirectory()) {
                     setResources(new WARDirContext());
-                else
+                } else {
                     setResources(new FileDirContext());
+                }
             } catch (IllegalArgumentException e) {
-                log.error("Error initializing resources: " + e.getMessage());
+                log.error(sm.getString("standardContext.resourcesInit"), e);
                 ok = false;
             }
         }
@@ -5312,12 +5449,12 @@ public class StandardContext extends ContainerBase
             dependencyCheck = ExtensionValidator.validateApplication
                 (getResources(), this);
         } catch (IOException ioe) {
-            log.error("Error in dependencyCheck", ioe);
+            log.error(sm.getString("standardContext.extensionValidationError"), ioe);
             dependencyCheck = false;
         }
 
         if (!dependencyCheck) {
-            // do not make application available if depency check fails
+            // do not make application available if dependency check fails
             ok = false;
         }
 
@@ -5337,20 +5474,21 @@ public class StandardContext extends ContainerBase
                 setNamingContextListener(ncl);
             }
         }
-        
+
         // Standard container startup
         if (log.isDebugEnabled())
             log.debug("Processing standard container startup");
 
-        
+
         // Binding thread
         ClassLoader oldCCL = bindThread();
 
         try {
 
             if (ok) {
-                
+
                 // Start our subordinate components, if any
+                Loader loader = getLoaderInternal();
                 if ((loader != null) && (loader instanceof Lifecycle))
                     ((Lifecycle) loader).start();
 
@@ -5365,18 +5503,20 @@ public class StandardContext extends ContainerBase
                 // too early, so it should be reset.
                 logger = null;
                 getLogger();
-                
+
+                Cluster cluster = getClusterInternal();
                 if ((cluster != null) && (cluster instanceof Lifecycle))
                     ((Lifecycle) cluster).start();
                 Realm realm = getRealmInternal();
                 if ((realm != null) && (realm instanceof Lifecycle))
                     ((Lifecycle) realm).start();
+                DirContext resources = getResourcesInternal();
                 if ((resources != null) && (resources instanceof Lifecycle))
                     ((Lifecycle) resources).start();
 
                 // Notify our interested LifecycleListeners
                 fireLifecycleEvent(Lifecycle.CONFIGURE_START_EVENT, null);
-                
+
                 // Start our child containers, if not already started
                 for (Container child : findChildren()) {
                     if (!child.getState().isAvailable()) {
@@ -5389,9 +5529,10 @@ public class StandardContext extends ContainerBase
                 if (pipeline instanceof Lifecycle) {
                     ((Lifecycle) pipeline).start();
                 }
-                
+
                 // Acquire clustered manager
                 Manager contextManager = null;
+                Manager manager = getManagerInternal();
                 if (manager == null) {
                     if (log.isDebugEnabled()) {
                         log.debug(sm.getString("standardContext.cluster.noManager",
@@ -5408,8 +5549,9 @@ public class StandardContext extends ContainerBase
                     } else {
                         contextManager = new StandardManager();
                     }
-                } 
-                
+                    manager = contextManager;
+                }
+
                 // Configure default manager if none was specified
                 if (contextManager != null) {
                     if (log.isDebugEnabled()) {
@@ -5432,7 +5574,7 @@ public class StandardContext extends ContainerBase
         }
 
         if (!getConfigured()) {
-            log.error( "Error getConfigured");
+            log.error(sm.getString("standardContext.configurationFail"));
             ok = false;
         }
 
@@ -5442,7 +5584,7 @@ public class StandardContext extends ContainerBase
                 (Globals.RESOURCES_ATTR, getResources());
 
         // Initialize associated mapper
-        mapper.setContext(getPath(), welcomeFiles, resources);
+        mapper.setContext(getPath(), welcomeFiles, getResources());
 
         // Binding thread
         oldCCL = bindThread();
@@ -5488,37 +5630,38 @@ public class StandardContext extends ContainerBase
             // Configure and call application event listeners
             if (ok) {
                 if (!listenerStart()) {
-                    log.error( "Error listenerStart");
+                    log.error(sm.getString("standardContext.listenerFail"));
                     ok = false;
                 }
             }
-            
+
             try {
                 // Start manager
+                Manager manager = getManagerInternal();
                 if ((manager != null) && (manager instanceof Lifecycle)) {
                     ((Lifecycle) getManager()).start();
                 }
             } catch(Exception e) {
-                log.error("Error manager.start()", e);
+                log.error(sm.getString("standardContext.managerFail"), e);
                 ok = false;
             }
 
             // Configure and call application filters
             if (ok) {
                 if (!filterStart()) {
-                    log.error("Error filterStart");
+                    log.error(sm.getString("standardContext.filterFail"));
                     ok = false;
                 }
             }
-            
+
             // Load and initialize all "load on startup" servlets
             if (ok) {
                 if (!loadOnStartup(findChildren())){
-                    log.error("Error loadOnStartup");
+                    log.error(sm.getString("standardContext.servletFail"));
                     ok = false;
                 }
             }
-            
+
             // Start ContainerBackgroundProcessor thread
             super.threadStart();
         } finally {
@@ -5535,16 +5678,16 @@ public class StandardContext extends ContainerBase
         }
 
         startTime=System.currentTimeMillis();
-        
-        // Send j2ee.state.running notification 
+
+        // Send j2ee.state.running notification
         if (ok && (this.getObjectName() != null)) {
-            Notification notification = 
+            Notification notification =
                 new Notification("j2ee.state.running", this.getObjectName(),
                                  sequenceNumber.getAndIncrement());
             broadcaster.sendNotification(notification);
         }
 
-        // Close all JARs right away to avoid always opening a peak number 
+        // Close all JARs right away to avoid always opening a peak number
         // of files on startup
         if (getLoader() instanceof WebappLoader) {
             ((WebappLoader) getLoader()).closeJARs(true);
@@ -5600,7 +5743,7 @@ public class StandardContext extends ContainerBase
         }
     }
 
-    
+
 
     /**
      * Merge the context initialization parameters specified in the application
@@ -5610,7 +5753,7 @@ public class StandardContext extends ContainerBase
      */
     private void mergeParameters() {
         Map<String,String> mergedParams = new HashMap<String,String>();
-        
+
         String names[] = findParameters();
         for (int i = 0; i < names.length; i++) {
             mergedParams.put(names[i], findParameter(names[i]));
@@ -5627,7 +5770,7 @@ public class StandardContext extends ContainerBase
                 mergedParams.put(params[i].getName(), params[i].getValue());
             }
         }
-        
+
         ServletContext sc = getServletContext();
         for (Map.Entry<String,String> entry : mergedParams.entrySet()) {
             sc.setInitParameter(entry.getKey(), entry.getValue());
@@ -5646,14 +5789,14 @@ public class StandardContext extends ContainerBase
     @Override
     protected synchronized void stopInternal() throws LifecycleException {
 
-        // Send j2ee.state.stopping notification 
+        // Send j2ee.state.stopping notification
         if (this.getObjectName() != null) {
-            Notification notification = 
-                new Notification("j2ee.state.stopping", this.getObjectName(), 
+            Notification notification =
+                new Notification("j2ee.state.stopping", this.getObjectName(),
                                  sequenceNumber.getAndIncrement());
             broadcaster.sendNotification(notification);
         }
-        
+
         setState(LifecycleState.STOPPING);
 
         // Binding thread
@@ -5663,7 +5806,7 @@ public class StandardContext extends ContainerBase
 
             // Stop our child containers, if any
             final Container[] children = findChildren();
-            
+
             ClassLoader old = bindThread();
             try {
                 // Stop ContainerBackgroundProcessor thread
@@ -5672,15 +5815,16 @@ public class StandardContext extends ContainerBase
                 for (int i = 0; i < children.length; i++) {
                     children[i].stop();
                 }
-            
+
                 // Stop our filters
                 filterStop();
-            
+
+                Manager manager = getManagerInternal();
                 if (manager != null && manager instanceof Lifecycle &&
                         ((Lifecycle) manager).getState().isAvailable()) {
                     ((Lifecycle) manager).stop();
                 }
-            
+
                 // Stop our application listeners
                 listenerStop();
             } finally{
@@ -5695,13 +5839,13 @@ public class StandardContext extends ContainerBase
                 log.debug("Processing standard container shutdown");
 
             // JNDI resources are unbound in CONFIGURE_STOP_EVENT so stop
-            // naming resoucres before they are unbound since NamingResoucres
+            // naming resources before they are unbound since NamingResources
             // does a JNDI lookup to retrieve the resource. This needs to be
-            // after the application has finished with the resource 
+            // after the application has finished with the resource
             if (namingResources != null) {
                 namingResources.stop();
             }
-            
+
             fireLifecycleEvent(Lifecycle.CONFIGURE_STOP_EVENT, null);
 
             // Stop the Valves in our pipeline (including the basic), if any
@@ -5721,9 +5865,11 @@ public class StandardContext extends ContainerBase
             if ((realm != null) && (realm instanceof Lifecycle)) {
                 ((Lifecycle) realm).stop();
             }
+            Cluster cluster = getClusterInternal();
             if ((cluster != null) && (cluster instanceof Lifecycle)) {
                 ((Lifecycle) cluster).stop();
             }
+            Loader loader = getLoaderInternal();
             if ((loader != null) && (loader instanceof Lifecycle)) {
                 ((Lifecycle) loader).stop();
             }
@@ -5735,26 +5881,26 @@ public class StandardContext extends ContainerBase
 
         }
 
-        // Send j2ee.state.stopped notification 
+        // Send j2ee.state.stopped notification
         if (this.getObjectName() != null) {
-            Notification notification = 
-                new Notification("j2ee.state.stopped", this.getObjectName(), 
+            Notification notification =
+                new Notification("j2ee.state.stopped", this.getObjectName(),
                                 sequenceNumber.getAndIncrement());
             broadcaster.sendNotification(notification);
         }
-        
+
         // Reset application context
         context = null;
 
-        // This object will no longer be visible or used. 
+        // This object will no longer be visible or used.
         try {
             resetContext();
         } catch( Exception ex ) {
-            log.error( "Error reseting context " + this + " " + ex, ex );
+            log.error( "Error resetting context " + this + " " + ex, ex );
         }
-        
+
         //reset the instance manager
-        instanceManager = null;
+        setInstanceManager(null);
 
         if (log.isDebugEnabled())
             log.debug("Stopping complete");
@@ -5762,26 +5908,26 @@ public class StandardContext extends ContainerBase
     }
 
     /** Destroy needs to clean up the context completely.
-     * 
-     * The problem is that undoing all the config in start() and restoring 
+     *
+     * The problem is that undoing all the config in start() and restoring
      * a 'fresh' state is impossible. After stop()/destroy()/init()/start()
      * we should have the same state as if a fresh start was done - i.e
-     * read modified web.xml, etc. This can only be done by completely 
+     * read modified web.xml, etc. This can only be done by completely
      * removing the context object and remapping a new one, or by cleaning
      * up everything.
-     * 
+     *
      * XXX Should this be done in stop() ?
-     * 
-     */ 
+     *
+     */
     @Override
     protected void destroyInternal() throws LifecycleException {
-        
+
         // If in state NEW when destroy is called, the object name will never
         // have been set so the notification can't be created
-        if (getObjectName() != null) { 
-            // Send j2ee.object.deleted notification 
-            Notification notification = 
-                new Notification("j2ee.object.deleted", this.getObjectName(), 
+        if (getObjectName() != null) {
+            // Send j2ee.object.deleted notification
+            Notification notification =
+                new Notification("j2ee.object.deleted", this.getObjectName(),
                                  sequenceNumber.getAndIncrement());
             broadcaster.sendNotification(notification);
         }
@@ -5796,11 +5942,28 @@ public class StandardContext extends ContainerBase
 
         super.destroyInternal();
     }
-    
+
+
+    @Override
+    public void backgroundProcess() {
+
+        InstanceManager instanceManager = getInstanceManager();
+        if (instanceManager instanceof DefaultInstanceManager) {
+            try {
+                ((DefaultInstanceManager)instanceManager).backgroundProcess();
+            } catch (Exception e) {
+                log.warn(sm.getString("standardContext.backgroundProcess.instanceManager",
+                        instanceManager), e);
+            }
+        }
+        super.backgroundProcess();
+    }
+
+
     private void resetContext() throws Exception {
         // Restore the original state ( pre reading web.xml in start )
         // If you extend this - override this method and make sure to clean up
-        
+
         // Don't reset anything that is read from a <Context.../> element since
         // <Context .../> elements are read at initialisation will not be read
         // again for this object
@@ -5818,9 +5981,9 @@ public class StandardContext extends ContainerBase
         applicationEventListenersObjects = new Object[0];
         applicationLifecycleListenersObjects = new Object[0];
         jspConfigDescriptor = new ApplicationJspConfigDescriptor();
-        
+
         initializers.clear();
-        
+
         createdServlets.clear();
 
         postConstructMethods.clear();
@@ -6090,14 +6253,14 @@ public class StandardContext extends ContainerBase
     return namingContextName;
     }
 
-    
+
     /**
      * Naming context listener accessor.
      */
     public NamingContextListener getNamingContextListener() {
         return namingContextListener;
     }
-    
+
 
     /**
      * Naming context listener setter.
@@ -6105,7 +6268,7 @@ public class StandardContext extends ContainerBase
     public void setNamingContextListener(NamingContextListener namingContextListener) {
         this.namingContextListener = namingContextListener;
     }
-    
+
 
     /**
      * Return the request processing paused flag for this Context.
@@ -6140,7 +6303,7 @@ public class StandardContext extends ContainerBase
 
         if ((instances != null) && (instances.length > 0)) {
 
-            ServletRequestEvent event = 
+            ServletRequestEvent event =
                     new ServletRequestEvent(getServletContext(), request);
 
             for (int i = 0; i < instances.length; i++) {
@@ -6150,7 +6313,7 @@ public class StandardContext extends ContainerBase
                     continue;
                 ServletRequestListener listener =
                     (ServletRequestListener) instances[i];
-                
+
                 try {
                     listener.requestInitialized(event);
                 } catch (Throwable t) {
@@ -6173,7 +6336,7 @@ public class StandardContext extends ContainerBase
 
         if ((instances != null) && (instances.length > 0)) {
 
-            ServletRequestEvent event = 
+            ServletRequestEvent event =
                 new ServletRequestEvent(getServletContext(), request);
 
             for (int i = 0; i < instances.length; i++) {
@@ -6184,7 +6347,7 @@ public class StandardContext extends ContainerBase
                     continue;
                 ServletRequestListener listener =
                     (ServletRequestListener) instances[j];
-                
+
                 try {
                     listener.requestDestroyed(event);
                 } catch (Throwable t) {
@@ -6410,10 +6573,10 @@ public class StandardContext extends ContainerBase
     /**
      * JSR77 deploymentDescriptor attribute
      *
-     * @return string deployment descriptor 
+     * @return string deployment descriptor
      */
     public String getDeploymentDescriptor() {
-    
+
         InputStream stream = null;
         ServletContext servletContext = getServletContext();
         if (servletContext != null) {
@@ -6442,17 +6605,17 @@ public class StandardContext extends ContainerBase
             }
         }
 
-        return sb.toString(); 
+        return sb.toString();
     }
-    
-    
+
+
     /**
      * JSR77 servlets attribute
      *
      * @return list of all servlets ( we know about )
      */
     public String[] getServlets() {
-        
+
         String[] result = null;
 
         Container[] children = findChildren();
@@ -6465,7 +6628,7 @@ public class StandardContext extends ContainerBase
 
         return result;
     }
-    
+
 
     @Override
     protected String getObjectNameKeyProperties() {
@@ -6480,7 +6643,7 @@ public class StandardContext extends ContainerBase
 
         return keyProperties.toString();
     }
-    
+
     private String getObjectKeyPropertiesNameOnly() {
         StringBuilder result = new StringBuilder("name=//");
         String hostname = getParent().getName();
@@ -6489,7 +6652,7 @@ public class StandardContext extends ContainerBase
         } else {
             result.append(hostname);
         }
-        
+
         String contextName = getName();
         if (!contextName.startsWith("/")) {
             result.append('/');
@@ -6502,7 +6665,7 @@ public class StandardContext extends ContainerBase
     @Override
     protected void initInternal() throws LifecycleException {
         super.initInternal();
-        
+
         if (processTlds) {
             this.addLifecycleListener(new TldConfig());
         }
@@ -6512,7 +6675,7 @@ public class StandardContext extends ContainerBase
             namingResources.init();
         }
 
-        // Send j2ee.object.created notification 
+        // Send j2ee.object.created notification
         if (this.getObjectName() != null) {
             Notification notification = new Notification("j2ee.object.created",
                     this.getObjectName(), sequenceNumber.getAndIncrement());
@@ -6521,17 +6684,17 @@ public class StandardContext extends ContainerBase
     }
 
 
-    /* Remove a JMX notficationListener 
+    /* Remove a JMX notificationListener
      * @see javax.management.NotificationEmitter#removeNotificationListener(javax.management.NotificationListener, javax.management.NotificationFilter, java.lang.Object)
      */
     @Override
-    public void removeNotificationListener(NotificationListener listener, 
+    public void removeNotificationListener(NotificationListener listener,
             NotificationFilter filter, Object object) throws ListenerNotFoundException {
         broadcaster.removeNotificationListener(listener,filter,object);
     }
-    
+
     private MBeanNotificationInfo[] notificationInfo;
-    
+
     /* Get JMX Broadcaster Info
      * @TODO use StringManager for international support!
      * @TODO This two events we not send j2ee.state.failed and j2ee.attribute.changed!
@@ -6546,7 +6709,7 @@ public class StandardContext extends ContainerBase
                     "j2ee.object.created"},
                     Notification.class.getName(),
                     "web application is created"
-                    ), 
+                    ),
                     new MBeanNotificationInfo(new String[] {
                     "j2ee.state.starting"},
                     Notification.class.getName(),
@@ -6573,34 +6736,34 @@ public class StandardContext extends ContainerBase
                     "web application is deleted"
                     )
             };
-            
+
         }
-        
+
         return notificationInfo;
     }
-    
-    
+
+
     /* Add a JMX-NotificationListener
      * @see javax.management.NotificationBroadcaster#addNotificationListener(javax.management.NotificationListener, javax.management.NotificationFilter, java.lang.Object)
      */
     @Override
-    public void addNotificationListener(NotificationListener listener, 
+    public void addNotificationListener(NotificationListener listener,
             NotificationFilter filter, Object object) throws IllegalArgumentException {
         broadcaster.addNotificationListener(listener,filter,object);
     }
-    
-    
+
+
     /**
-     * Remove a JMX-NotificationListener 
+     * Remove a JMX-NotificationListener
      * @see javax.management.NotificationBroadcaster#removeNotificationListener(javax.management.NotificationListener)
      */
     @Override
-    public void removeNotificationListener(NotificationListener listener) 
+    public void removeNotificationListener(NotificationListener listener)
     throws ListenerNotFoundException {
         broadcaster.removeNotificationListener(listener);
     }
-    
-    
+
+
     // ------------------------------------------------------------- Attributes
 
 
@@ -6617,7 +6780,7 @@ public class StandardContext extends ContainerBase
 
     /**
      * Return the naming resources associated with this web application.
-     * FIXME: Fooling introspection ... 
+     * FIXME: Fooling introspection ...
      */
     @Deprecated
     public javax.naming.directory.DirContext findStaticResources() {
@@ -6636,7 +6799,7 @@ public class StandardContext extends ContainerBase
 
     }
 
-    
+
     @Override
     public boolean getXmlNamespaceAware(){
         return webXmlNamespaceAware;
@@ -6646,7 +6809,7 @@ public class StandardContext extends ContainerBase
     @Override
     public void setXmlNamespaceAware(boolean webXmlNamespaceAware){
         this.webXmlNamespaceAware = webXmlNamespaceAware;
-    }    
+    }
 
 
     @Override
@@ -6670,7 +6833,7 @@ public class StandardContext extends ContainerBase
     @Override
     public void setTldNamespaceAware(boolean tldNamespaceAware){
         // NO-OP;
-    }    
+    }
 
 
     @Override
@@ -6715,60 +6878,60 @@ public class StandardContext extends ContainerBase
     }
 
 
-    /** 
-     * Support for "stateManageable" JSR77 
+    /**
+     * Support for "stateManageable" JSR77
      */
     public boolean isStateManageable() {
         return true;
     }
-    
+
     @Deprecated
     public void startRecursive() throws LifecycleException {
         // nothing to start recursive, the servlets will be started by load-on-startup
         start();
     }
-    
+
     /**
      * The J2EE Server ObjectName this module is deployed on.
-     */     
+     */
     private String server = null;
-    
+
     /**
      * The Java virtual machines on which this module is running.
-     */       
+     */
     private String[] javaVMs = null;
-    
+
     public String getServer() {
         return server;
     }
-        
+
     public String setServer(String server) {
         return this.server=server;
     }
-        
+
     public String[] getJavaVMs() {
         return javaVMs;
     }
-        
+
     public String[] setJavaVMs(String[] javaVMs) {
         return this.javaVMs = javaVMs;
     }
-    
+
     /**
      * Gets the time this context was started.
      *
      * @return Time (in milliseconds since January 1, 1970, 00:00:00) when this
-     * context was started 
+     * context was started
      */
     public long getStartTime() {
         return startTime;
     }
-    
+
     @Deprecated
     public boolean isEventProvider() {
         return false;
     }
-    
+
     @Deprecated
     public boolean isStatisticsProvider() {
         return false;
