@@ -53,7 +53,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
     private static final StringManager sm =
             StringManager.getManager(Constants.PACKAGE_NAME);
 
-    private static final ByteBuffer DUMMY = ByteBuffer.allocate(8192);
+    private static final ByteBuffer DUMMY = ByteBuffer.allocate(16921);
     private final AsynchronousSocketChannel socketChannel;
     private final SSLEngine sslEngine;
     private final ByteBuffer socketReadBuffer;
@@ -236,6 +236,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                             "asyncChannelWrapperSecure.wrongStateWrite")));
                 }
             } catch (Exception e) {
+                writing.set(false);
                 future.fail(e);
             }
         }
@@ -263,8 +264,8 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                     socketReadBuffer.compact();
 
                     if (forceRead) {
-                        Future<Integer> f =
-                                socketChannel.read(socketReadBuffer);
+                        forceRead = false;
+                        Future<Integer> f = socketChannel.read(socketReadBuffer);
                         Integer socketRead = f.get();
                         if (socketRead.intValue() == -1) {
                             throw new EOFException(sm.getString(
@@ -335,6 +336,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                             "asyncChannelWrapperSecure.wrongStateRead")));
                 }
             } catch (Exception e) {
+                reading.set(false);
                 future.fail(e);
             }
         }
@@ -544,7 +546,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                 throw new ExecutionException(sm.getString(
                         "asyncChannelWrapperSecure.tooBig", result), null);
             }
-            return new Integer(result.intValue());
+            return Integer.valueOf(result.intValue());
         }
 
         @Override
@@ -556,7 +558,7 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
                 throw new ExecutionException(sm.getString(
                         "asyncChannelWrapperSecure.tooBig", result), null);
             }
-            return new Integer(result.intValue());
+            return Integer.valueOf(result.intValue());
         }
     }
 
@@ -569,7 +571,8 @@ public class AsyncChannelWrapperSecure implements AsyncChannelWrapper {
         public Thread newThread(Runnable r) {
             Thread t = new Thread(r);
             t.setName("WebSocketClient-SecureIO-" + count.incrementAndGet());
-            t.setContextClassLoader(this.getClass().getClassLoader());
+            // No need to set the context class loader. The threads will be
+            // cleaned up when the connection is closed.
             t.setDaemon(true);
             return t;
         }
